Update extensions-test.yml - doc

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -76,4 +76,4 @@ jobs:
       - name: test
         run: |
           cd libsql-sqlite3/test/rust_suite
-          cargo test -- extensions
+          cargo test --features extensions --test tests extensions
