--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -77,8 +77,8 @@ jobs:
       - name: test
         run: |
           ls -la
-          cd libsql-sqlite3
-          ls -la
+          # cd libsql-sqlite3
+          # ls -la
           echo "==="
-          # cd libsql-sqlite3/test/rust_suite
+          cd libsql-sqlite3/test/rust_suite
           cargo test --test extensions
