--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -81,4 +81,5 @@ jobs:
           # ls -la
           echo "==="
           cd libsql-sqlite3/test/rust_suite
-          cargo test --test extensions
+          # cargo test --test extensions
+          cargo test --features=extensions
