Update extensions-test.yml - 1

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -82,4 +82,6 @@ jobs:
           echo "==="
           cd libsql-sqlite3/test/rust_suite
           # cargo test --test extensions
-          cargo test --features=extensions
+          # cargo test --features=extensions
+          cargo test --features=extensions --test extensions::test_sqlite_vss
+
