--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -84,5 +84,6 @@ jobs:
           # cargo test --test extensions
           # cargo test --features=extensions
           # cargo test --features=extensions --test extensions::test_sqlite_vss
-          cargo test --features=extensions test_sqlite_vss
+          # cargo test --features=extensions test_sqlite_vss
+          cargo test --features=extensions src::extensions
 
