--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -85,5 +85,6 @@ jobs:
           # cargo test --features=extensions
           # cargo test --features=extensions --test extensions::test_sqlite_vss
           # cargo test --features=extensions test_sqlite_vss
-          cargo test --features=extensions src::extensions
+          # cargo test --features=extensions src::extensions
+          cargo test --features=extensions -- src::extensions
 
