Update extensions-test.yml - 1

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -86,5 +86,6 @@ jobs:
           # cargo test --features=extensions --test extensions::test_sqlite_vss
           # cargo test --features=extensions test_sqlite_vss
           # cargo test --features=extensions src::extensions
-          cargo test --features=extensions -- src::extensions
+          # cargo test --features=extensions -- src::extensions
+          cargo test --features extensions --tests src/extensions
 
