Update extensions-test.yml - cargo test --tests "src::extensions::*

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -88,5 +88,6 @@ jobs:
           # cargo test --features=extensions src::extensions
           # cargo test --features=extensions -- src::extensions
           # cargo test --features extensions --tests src/extensions
-          cargo test -- --extensions
+          # cargo test -- --extensions
+          cargo test --tests "src::extensions::*"
 
