--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -89,5 +89,6 @@ jobs:
           # cargo test --features=extensions -- src::extensions
           # cargo test --features extensions --tests src/extensions
           # cargo test -- --extensions
-          cargo test --tests "src::extensions::*"
+          # cargo test --tests "src::extensions::*"
+          cargo test "src::extensions::*"
 
