ci: fix duplicated rust suites test.specify testname

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -76,4 +76,5 @@ jobs:
       - name: test
         run: |
           cd libsql-sqlite3/test/rust_suite
-          cargo test --features extensions --test tests extensions
+          # Only execute extensions tests
+          cargo test --features=extensions test_sqlite_vss
