Update extensions-test.yml - sss

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -84,11 +84,13 @@ jobs:
           # cargo test --test extensions
           # cargo test --features=extensions
           # cargo test --features=extensions --test extensions::test_sqlite_vss
-          cargo test --features=extensions test_sqlite_vss
+          # cargo test --features=extensions test_sqlite_vss -> OK
           # cargo test --features=extensions src::extensions
           # cargo test --features=extensions -- src::extensions
           # cargo test --features extensions --tests src/extensions
           # cargo test -- --extensions
           # cargo test --tests "src::extensions::*"
           # cargo test "src::extensions::*"
+          cargo test --features=extensions "extensions::.*"
+
 
