--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -91,6 +91,8 @@ jobs:
           # cargo test -- --extensions
           # cargo test --tests "src::extensions::*"
           # cargo test "src::extensions::*"
-          cargo test --features=extensions "extensions::.*"
+          # cargo test --features=extensions "extensions::.*"
+          cargo test --features=extensions extensions
+
 
 
