Update extensions-test.yml basic

--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -92,7 +92,8 @@ jobs:
           # cargo test --tests "src::extensions::*"
           # cargo test "src::extensions::*"
           # cargo test --features=extensions "extensions::.*"
-          cargo test --features=extensions extensions
+          # cargo test --features=extensions extensions
+          cargo test extensions
 
 
 
