--- a/.github/workflows/extensions-test.yml
+++ b/.github/workflows/extensions-test.yml
@@ -77,4 +77,4 @@ jobs:
         run: |
           cd libsql-sqlite3/test/rust_suite
           # Only execute extensions tests
-          cargo test --features=extensions test_sqlite_vss
+          cargo test --features=extensions extensions
